Bug 247377 - can't migrate old tbird profiles when the OS username contains non-ASCII characters... I mis-reverse-engineered the old profile registry code. r=jshin